ховер+фокус  тел і мейл+ фікс лого

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,12 @@ body {
   letter-spacing: 0.02em;
   color: var(--second-tittle-color);
 }
+.header-mail-link:hover,
+.header-mail-link:focus {color: var(--accent-color);}
+.header-tel-link:hover,
+.header-tel-link:focus {color: var(--accent-color);}
+
+
 .header-mail-link {
   color: var(--text-tittle-color);
   
