--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,14 @@
   --contacts-color: rgba(255, 255, 255, 0.6);
 }
 
+p,h1,h2,h3,h4,h5,h6{
+  margin: 0;
+}
+ul,
+ol{
+  margin: 0;
+}
+button{cursor: pointer;}
 body {
   font-family: "Roboto", sans-serif;
   color: #ffffff;
@@ -22,12 +30,19 @@ body {
   text-decoration: none;
 }
 /***************************HEADER*******************/
+.container{
+  width: 1200px;
+  outline: solid red 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+ 
+}
 .header{
   background-color: #fff;
+  
 }
-.container{
 
-}
 .header-link {
   font-weight: 500;
   font-size: 14px;
@@ -43,6 +58,8 @@ body {
   line-height: 1.9;
   letter-spacing: 0.03em;
   color: #000000;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 .style-logo {
   font-family: "Raleway ", sans-serif;
@@ -85,49 +102,65 @@ body {
 /************************HERO**********************/
 .conteiner-hero {
   background-color: var(--basic-color);
+  
 }
-.hero {
+.hero {text-align: center;
+  
 }
 .hero-tittle {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  margin-bottom: 30px;
+  padding-top: 200px;
+  
 
   color: var(--first-tittle-color);
 }
 .hero-btn {
-  font-family: inherit;
+  font-family: 'Roboto' sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
+
+  background: #2196F3;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+  margin-bottom: 200px;
   color: var(--first-tittle-color);
 }
 /***********************ABOUT********************/
-.advantage-list {
-}
+.advantage-list {}
+
+
 .advantage-item {
+  padding-top: 94px;
+  
+margin-right: 30px;
+
 }
+
+
 .advantage-tittle {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-bottom: 10px;
   color: var(--second-tittle-color);
+  
 }
 .advantage-sub-tittle {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  margin-bottom: 94px;
   color: var(--text-tittle-color);
 }
 /*---------------------Work----------*/
@@ -142,6 +175,7 @@ body {
 }
 
 .work-tittle {
+  margin-bottom: 50px;
   color: var(--second-tittle-color);
 }
 .work-list {
