--- a/css/style.css
+++ b/css/style.css
@@ -18,90 +18,95 @@ ol{
 button{cursor: pointer;}
 body {
   font-family: "Roboto", sans-serif;
-  color: #ffffff;
+  color:var(--text-tittle-color);
+  letter-spacing: 0.03em;
+  font-size: 14px;
+  background-color: var(--first-tittle-color);
 }
-.header {
-  background-color: white;
-}
+
 .list {
   list-style: none;
 }
 .link {
   text-decoration: none;
 }
-/***************************HEADER*******************/
 .container{
   width: 1200px;
   outline: solid red 1px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
- 
+}
+/***************************HEADER*******************/
+.header>.container,.header-navigation
+ {
+  display: flex;
+  align-items: center;
 }
 .header{
-  background-color: #fff;
-  
-}
-
-.header-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-
-  color: var(--second-tittle-color);
-}
-.header-logo-link {
-  font-family: "Raleway ", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.9;
-  letter-spacing: 0.03em;
-  color: #000000;
   padding-top: 24px;
   padding-bottom: 25px;
+  min-height: 80px;
+  border: 1px solid #ECECEC;
+}
+.header-logo-link {
+  font-family: 'Raleway';
+font-weight: 700;
+font-size: 26px;
+line-height: 1.19;
+margin-right: 93px;
+color:var(--second-tittle-color);
 }
 .style-logo {
-  font-family: "Raleway ", sans-serif;
-  font-weight: 700;
-  color: #2196f3;
+  color: var(--accent-color);
+ 
+}
+.header-navigation {
+}
+.header-list {
+  display: flex;
+  margin-left: auto;
+}
+.header-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.header-link {
+  font-weight: 500;
+font-size: 14px;
+line-height:1.14;
+letter-spacing: 0.02em;
+color: var(--second-tittle-color);
 }
 .header-link:hover,
-.header-link:focus {
+.header-link:focus{
+  color: var(
+    --accent-color);
+}
+.active{
   color: var(--accent-color);
 }
-
-.header-link {
+.header-mail,
+.header-tel {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-
-  color: var(--second-tittle-color);
-}
-.header-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--second-tittle-color);
-}
-.header-mail-link:hover,
-.header-mail-link:focus {color: var(--accent-color);}
-.header-tel-link:hover,
-.header-tel-link:focus {color: var(--accent-color);}
-
-
-.header-mail-link {
   color: var(--text-tittle-color);
-  
 }
-.header-tel-link{
-  color :var(--text-tittle-color);
+.header-mail:hover,
+.header-mail:focus {
+color: var(--accent-color);
+}
+.header-tel:hover,
+.header-tel:focus {
+  color: var(--accent-color);
 }
 /************************HERO**********************/
 .conteiner-hero {
   background-color: var(--basic-color);
+  padding-bottom: 200px;
+  ;
   
 }
 .hero {text-align: center;
@@ -115,6 +120,8 @@ body {
   text-transform: uppercase;
   margin-bottom: 30px;
   padding-top: 200px;
+  padding-left: 237px;
+  padding-right: 237px;
   
 
   color: var(--first-tittle-color);
@@ -126,21 +133,29 @@ body {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-
+  
   background: #2196F3;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
-  margin-bottom: 200px;
-  color: var(--first-tittle-color);
+ color: var(--first-tittle-color);
+
 }
 /***********************ABOUT********************/
-.advantage-list {}
+.advantage-container:
+{
+  margin: right 30px;;
+
+}
+.advantage{
+ padding-top: 94px;
+ padding-bottom: 94px;
+ 
+}
+.advantage-list {display: flex;}
 
 
 .advantage-item {
-  padding-top: 94px;
   
-margin-right: 30px;
 
 }
 
@@ -152,6 +167,7 @@ margin-right: 30px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 10px;
+  margin-right: 30px;
   color: var(--second-tittle-color);
   
 }
@@ -160,7 +176,7 @@ margin-right: 30px;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  margin-bottom: 94px;
+margin-right: 30px;
   color: var(--text-tittle-color);
 }
 /*---------------------Work----------*/
@@ -172,6 +188,9 @@ margin-right: 30px;
   letter-spacing: 0.03em;
 }
 .work {
+  padding-top: 94px;
+  padding-bottom: 94px;
+ 
 }
 
 .work-tittle {
@@ -179,16 +198,29 @@ margin-right: 30px;
   color: var(--second-tittle-color);
 }
 .work-list {
+  display: flex;
+  justify-content: space-around;
 }
 .work-item {
+  margin-right: 30px;
+
 }
 /*---------------------TEAM---------*/
 .team {
+  background-color: #F5F4FA;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 .team-tittle {
   color: var(--second-tittle-color);
+
 }
 .team-list {
+  align-items: center;
+  display: flex;
+}
+.team-item{
+  margin-right: 30px;
 }
 .team-mini-tittle {
   font-weight: 500;
@@ -196,6 +228,7 @@ margin-right: 30px;
   line-height: 1.9;
   text-align: center;
   letter-spacing: 0.03em;
+  margin-bottom: 10;
   color: var(--second-tittle-color);
 }
 .team-sub-mini-tittle {
@@ -210,28 +243,50 @@ margin-right: 30px;
 /*---------------FOOTER_CONTACTS-----------------*/
 .contacts {
   background-color: var(--basic-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .contacts-logo {
+  font-family: 'Raleway';
+font-style: normal;
+font-weight: 700;
+font-size: 26px;
+line-height: 1.19px;
+color: var(--first-tittle-color);
+
+letter-spacing: 0.03em;
+
+  margin-bottom: 20px;
 }
 .contacts-list {
 }
 .contacts-item {
+ 
+  margin-bottom: 9px;
 }
 .contacts-link:hover,
 .contacts-link:focus {
   color: var(--accent-color);
 }
-.contacts-link {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--contacts-color);
+.contacts-tel-link {
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: rgba(255, 255, 255, 0.6);
 }
-.contacts-link {
+.contacts-mail-link {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: var(--contacts-color);
+
+  color: rgba(255, 255, 255, 0.6);
+  
 }
 .adress:hover,
 .adress:focus {
