--- a/css/style.css
+++ b/css/style.css
@@ -1,362 +1,438 @@
 :root {
-  --header-color: #ffffff;
-  --first-tittle-color: #ffffff;
-  --second-tittle-color: #212121;
-  --text-tittle-color: #757575;
-  --accent-color: #2196f3;
-  --basic-color: #2f303a;
-  --contacts-color: rgba(255, 255, 255, 0.6);
+    --header-color: #ffffff;
+    --first-tittle-color: #ffffff;
+    --second-tittle-color: #212121;
+    --text-tittle-color: #757575;
+    --accent-color: #2196f3;
+    --basic-color: #2f303a;
+    --contacts-color: rgba(255, 255, 255, 0.6);
+    --background-team: #F5F4FA;
 }
 
-p,h1,h2,h3,h4,h5,h6{
-  margin: 0;
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
 }
+
 ul,
-ol{
-  margin: 0;
+ol {
+    margin: 0;
+    padding: 0;
 }
-button{cursor: pointer;}
+
+button {
+    cursor: pointer;
+}
+
 body {
-  font-family: "Roboto", sans-serif;
-  color:var(--text-tittle-color);
-  letter-spacing: 0.03em;
-  font-size: 14px;
-  background-color: var(--first-tittle-color);
+    font-family: "Roboto", sans-serif;
+    color: var(--text-tittle-color);
+    letter-spacing: 0.03em;
+    font-size: 14px;
+    background-color: var(--first-tittle-color);
 }
 
 .list {
-  list-style: none;
+    list-style: none;
 }
+
 .link {
-  text-decoration: none;
+    text-decoration: none;
 }
-.container{
-  width: 1200px;
-  outline: solid red 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
+
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
 }
+
+
 /***************************HEADER*******************/
-.header>.container,.header-navigation
- {
-  display: flex;
-  align-items: center;
-}
-.header{
-  padding-top: 24px;
-  padding-bottom: 25px;
-  min-height: 80px;
-  border: 1px solid #ECECEC;
-}
-.header-logo-link {
-  font-family: 'Raleway';
-font-weight: 700;
-font-size: 26px;
-line-height: 1.19;
-margin-right: 93px;
-color:var(--second-tittle-color);
-}
-.style-logo {
-  color: var(--accent-color);
- 
-}
+
+.header>.container,
 .header-navigation {
+    display: flex;
+    align-items: center;
 }
+
+.header {
+    padding-top: 24px;
+    padding-bottom: 25px;
+    min-height: 80px;
+    border: 1px solid #ECECEC;
+}
+
+.header-logo-link {
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    margin-right: 93px;
+    color: var(--second-tittle-color);
+}
+
+.style-logo {
+    color: var(--accent-color);
+}
+
+.header-navigation {}
+
 .header-list {
-  display: flex;
-  margin-left: auto;
+    display: flex;
+    margin-left: auto;
 }
+
 .header-item:not(:last-child) {
-  margin-right: 50px;
+    margin-right: 50px;
 }
 
 .header-link {
-  font-weight: 500;
-font-size: 14px;
-line-height:1.14;
-letter-spacing: 0.02em;
-color: var(--second-tittle-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--second-tittle-color);
 }
+
 .header-link:hover,
-.header-link:focus{
-  color: var(
-    --accent-color);
+.header-link:focus {
+    color: var( --accent-color);
 }
-.active{
-  color: var(--accent-color);
+
+.active {
+    color: var(--accent-color);
 }
+
 .header-mail,
 .header-tel {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--text-tittle-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--text-tittle-color);
 }
+
+.header-mail {
+    margin-right: 50px;
+}
+
 .header-mail:hover,
 .header-mail:focus {
-color: var(--accent-color);
+    color: var(--accent-color);
 }
+
 .header-tel:hover,
 .header-tel:focus {
-  color: var(--accent-color);
+    color: var(--accent-color);
 }
+
+
 /************************HERO**********************/
-.conteiner-hero {
-  background-color: var(--basic-color);
-  padding-bottom: 200px;
-  ;
-  
+
+.hero {
+    min-height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background: var(--basic-color);
 }
-.hero {text-align: center;
-  
-}
+
 .hero-tittle {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-  padding-top: 200px;
-  padding-left: 237px;
-  padding-right: 237px;
-  
-
-  color: var(--first-tittle-color);
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    max-width: 696px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    color: var(--first-tittle-color);
 }
+
 .hero-btn {
-  font-family: 'Roboto' sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  
-  background: #2196F3;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
- color: var(--first-tittle-color);
-
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: block;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    margin-left: auto;
+    margin-right: auto;
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    min-width: 200px;
+    height: 50px;
+    color: var(--first-tittle-color);
 }
-/***********************ABOUT********************/
-.advantage-container:
-{
-  margin: right 30px;;
 
-}
-.advantage{
- padding-top: 94px;
- padding-bottom: 94px;
- 
-}
-.advantage-list {display: flex;}
 
+/***********************ADVANTAGE********************/
+
+.advantage {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.advantage-list {
+    margin-right: -30px;
+    display: flex;
+}
 
 .advantage-item {
-  
-
+    width: calc (100% / 4 - 30px);
+    margin-right: 30px;
 }
-
 
 .advantage-tittle {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-  margin-right: 30px;
-  color: var(--second-tittle-color);
-  
+    line-height: 1.14;
+    text-transform: uppercase;
+    font-size: 14px;
+    letter-spacing: 0.03em;
+    color: var(--second-tittle-color);
+    margin-bottom: 10px;
 }
+
 .advantage-sub-tittle {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-margin-right: 30px;
-  color: var(--text-tittle-color);
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--text-tittle-color)
 }
-/*---------------------Work----------*/
-.tittle {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.7;
-  text-align: center;
-  letter-spacing: 0.03em;
-}
+
+
+/***********************WORK*********************/
+
 .work {
-  padding-top: 94px;
-  padding-bottom: 94px;
- 
+    padding-bottom: 94px;
 }
 
 .work-tittle {
-  margin-bottom: 50px;
-  color: var(--second-tittle-color);
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    color: var(--second-tittle-color);
 }
+
 .work-list {
-  display: flex;
-  justify-content: space-around;
+    display: flex;
 }
-.work-item {
-  margin-right: 30px;
 
+.work-item:not(:last-child) {
+    margin-right: 30px;
 }
+
+
 /*---------------------TEAM---------*/
+
 .team {
-  background-color: #F5F4FA;
-  padding-top: 94px;
-  padding-bottom: 94px;
+    min-height: 648px;
+    background: var(--background-team);
+    padding-bottom: 94px;
 }
+
 .team-tittle {
-  color: var(--second-tittle-color);
-
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    color: var(--second-tittle-color);
 }
+
 .team-list {
-  align-items: center;
-  display: flex;
+    display: flex;
 }
-.team-item{
-  margin-right: 30px;
+
+.team-item:not(:last-child) {
+    margin-right: 30px;
 }
+
+.team-item {
+    background-color: var(--first-tittle-color);
+    max-width: 270px;
+    min-height: 368px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.name {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
 .team-mini-tittle {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.9;
-  text-align: center;
-  letter-spacing: 0.03em;
-  margin-bottom: 10;
-  color: var(--second-tittle-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    color: var(--second-tittle-color);
 }
+
 .team-sub-mini-tittle {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.9;
-  text-align: center;
-  letter-spacing: 0.03em;
-
-  color: var(--text-tittle-color);
+    margin-top: 10px;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
 }
+
+
 /*---------------FOOTER_CONTACTS-----------------*/
+
 .contacts {
-  background-color: var(--basic-color);
-  padding-top: 60px;
-  padding-bottom: 60px;
+    min-height: 252px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background: var(--basic-color);
 }
+
 .contacts-logo {
-  font-family: 'Raleway';
-font-style: normal;
-font-weight: 700;
-font-size: 26px;
-line-height: 1.19px;
-color: var(--first-tittle-color);
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    color: var(--first-tittle-color);
+}
 
-letter-spacing: 0.03em;
-
-  margin-bottom: 20px;
-}
-.contacts-list {
-}
-.contacts-item {
- 
-  margin-bottom: 9px;
-}
-.contacts-link:hover,
-.contacts-link:focus {
-  color: var(--accent-color);
-}
-.contacts-tel-link {
-  font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
-color: rgba(255, 255, 255, 0.6);
-}
-.contacts-mail-link {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-
-  color: rgba(255, 255, 255, 0.6);
-  
-}
-.adress:hover,
-.adress:focus {
-  color: var(--accent-color);
+.style-logo {
+    color: var(--accent-color);
 }
 
 .adress {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-
-  color: var(--first-tittle-color);
+    margin-top: 20px;
 }
+
+.contacts-list {}
+
+.contacts-adress {
+    font-style: normal;
+}
+
+.contacts-adress {
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--first-tittle-color);
+}
+
+.contacts-item {
+    margin-top: 9px;
+}
+
+.contacts-mail-link,
+.contacts-tel-link {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    color: var(--contacts-color);
+}
+
+.contacts-tel-link:hover,
+.contacts-tel-link:focus {
+    color: var(--accent-color);
+}
+
+.contacts-mail-link:hover,
+.contacts-mail-link:focus {
+    color: var(--accent-color);
+}
+
+
 /*-------------II page Profile---------*/
-/*----------Filtr------------*/
-.catalog{
-    
-}
-.filtr-list {
-}
-.filtr-item {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
 
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--first-tittle-color);
+
+/*----------CATALOG------------*/
+
+.catalog {
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
+
+.filtr-list {
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center
+}
+
+.filtr-item:not(:last-child) {
+    margin-right: 8px;
+}
+
+.filtr-btn {
+    padding: 6px 22px;
+    border: none;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    color: #212121;
+    background: #F5F4FA;
+    border-radius: 4px;
+}
+
 .filtr-btn:hover,
 .filtr-btn:focus {
-  color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    color: var(--first-tittle-color);
+    background-color: var(--accent-color);
 }
-.filtr-btn {
-    font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.62;
-text-align: center;
-letter-spacing: 0.03em;
 
-color: var(--second-tittle-color);
-  cursor: pointer;
-}
-/*----------PROJECTS------------*/
 .projects-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+    margin-bottom: -30px;
 }
+
 .projects-item {
-  font-weight: 700;
-  font-size: 2;
-  line-height: 36px;
-  letter-spacing: 0.06em;
-  color: var(--second-tittle-color);
+    border: 1px solid #EEEEEE;
+    width: 370px;
+    min-height: 404px;
 }
+
+.projects-item {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.projects-item:nth-last-child(3n+1) {
+    margin-right: 0;
+}
+
+.projects-item:nth-last-child(-n+1) {
+    margin-bottom: 0;
+}
+
+.catalog-name {
+    padding: 24px 20px;
+}
+
 .project-mini-tittle {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-
-  color: var(--second-tittle-color);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2.0;
+    letter-spacing: 0.06em;
+    margin-bottom: 4px;
+    color: var(--second-tittle-color);
 }
-.project-sub-mini-tittle {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.03em;
 
-  color: var(--text-tittle-color);
+.project-sub-mini-tittle {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+    color: var(--text-tittle-color);
 }
